<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppQuest PixelMaler</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_drawing">clear drawing</string>
    <string name="action_reset_grid_size">reset grid size</string>
    <string name="action_new_drawing">new drawing</string>
    <string name="action_log">log</string>
    <string name="title_activity_drawing_view">DrawingView</string>
    <string name="grid_size_x">x</string>
    <string name="grid_size_y">y</string>
    <string name="no_value">no_value</string>
    <string name="color">color</string>
    <string name="eraser">eraser</string>
    <string name="content_description_color">Displaying a color</string>
    <string name="content_description_eraser">Displaying a eraser</string>
    <string name="pref_button_colors">colors</string>
    <string name="pref_colors_color1">color 1</string>
    <string name="pref_colors_color2">color 2</string>
    <string name="pref_colors_color3">color 3</string>
    <string name="pref_colors_color4">color 4</string>
    <string name="pref_colors_color_red">red</string>
    <string name="pref_colors_color_green">green</string>
    <string name="pref_colors_color_blue">blue</string>

</resources>
